--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.btn-primary{
+    @apply bg-gradient-to-r from-indigo-500 to-purple-500 py-3 px-4 rounded-md font-bold text-white
+}
