--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,6 @@
 .text-primary{
     @apply text-purple-500
 }
+.btn-outline{
+    @apply border-solid border-2 border-purple-500 py-2 px-4 rounded-md
+}
